# emad-evaluation

./: README.md  pyproject.toml
emad_evaluation/: try1.py
tests/: test_emad_evaluation.py
