[tool.poetry]
name = "emad-evaluation"
version = "0.1.0"
description = ""
authors = ["emad-almajdalawi <majdalawi97@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
